--- a/config/assets.yml
+++ b/config/assets.yml
@@ -7,15 +7,11 @@ javascripts:
     - public/javascripts/mootools-more.js
     - public/javascripts/rails.js
     - public/javascripts/application.js
-  wall:
-    - public/javascripts/wall.js  
   posts:
     - public/javascripts/textboxlist.js
     - public/javascripts/post_form.js
     - public/javascripts/mooeditable.local.js
     - public/javascripts/mooeditable.js
-  tags:
-    - public/javascripts/tags.js
   blog_edit:
     - public/javascripts/mooeditable.local.js
     - public/javascripts/mooeditable.js
@@ -25,4 +21,44 @@ javascripts:
     - public/javascripts/Swiff.Uploader.js
     - public/javascripts/FancyUpload3.Attach.js
     - public/javascripts/Fx.ProgressBar.js
+  wall:
+    - public/javascripts/wall.js  
+  tags:
+    - public/javascripts/tags.js
+  lightbox:
+    - public/javascripts/cerabox.js
 
+stylesheets:
+  base:
+    - public/stylesheets/base.css
+  posts:
+    - public/stylesheets/textboxlist.css
+    - public/stylesheets/mooeditable.css
+    - public/stylesheets/post_edit.css
+  blog_edit:
+    - public/stylesheets/mooeditable.css
+    - public/stylesheets/moorainbow.css
+    - public/stylesheets/blog.css
+  blog:
+    - public/stylesheets/blog.css
+  user:
+    - public/stylesheets/user.css
+  wall:
+    - public/stylesheets/wall.css
+  tags:
+    - public/stylesheets/tags.css
+  comments:
+    - public/stylesheets/post_display.css
+  posts_display:
+    - public/stylesheets/dashboard.css
+    - public/stylesheets/post_display.css
+  main:
+    - public/stylesheets/main.css
+  buzz:
+    - public/stylesheets/buzz.css
+  apply:
+    - public/stylesheets/apply.css
+  admin:
+    - public/stylesheets/admin_templates.css
+  lightbox:
+    - public/stylesheets/cerabox.css
