emotion for 宽岛体

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -32,6 +32,8 @@ javascripts:
     - public/javascripts/sitemap.js
   category:
     - public/javascripts/category.js
+  demo:
+    - public/javascripts/demo.js
 
 stylesheets:
   base:
