--- a/config/development.sphinx.conf
+++ b/config/development.sphinx.conf
@@ -22,7 +22,8 @@ index post_core
   source = post_core_0
   path = /Users/lilu/kuan/db/sphinx/development/post_core
   morphology = stem_en
-  charset_type = utf-8
+  charset_dictpath = /usr/local/mmseg3/etc
+  charset_type = zh_cn.utf-8
 }
 
 index post
