--- a/config/sphinx.yml
+++ b/config/sphinx.yml
@@ -1,6 +1,8 @@
 default: &defaults
   listen: localhost:9312
   mem_limit: '512M'
+  charset_dictpath: "/usr/local/mmseg3/etc"
+  charset_type: "zh_cn.utf-8"
 
 development:
   <<: *defaults
