develop sphinx stream for mongo cursor timeout

--- a/config/production.sphinx.conf
+++ b/config/production.sphinx.conf
@@ -6,21 +6,21 @@ indexer
 searchd
 {
   listen = 127.0.0.1:9312
-  log = /Users/lilu/kuan/log/searchd.log
-  query_log = /Users/lilu/kuan/log/searchd.query.log
-  pid_file = /Users/lilu/kuan/log/searchd.development.pid
+  log = /var/kuan/current/log/searchd.log
+  query_log = /var/kuan/current/log/searchd.query.log
+  pid_file = /var/kuan/current/log/searchd.production.pid
 }
 
 source post_core_0
 {
   type = xmlpipe2
-  xmlpipe_command = RAILS_ENV=development script/rails runner 'Post.sphinx_stream_no_timeout'
+  xmlpipe_command = RAILS_ENV=production script/rails runner 'Post.sphinx_stream_no_timeout'
 }
 
 index post_core
 {
   source = post_core_0
-  path = /Users/lilu/kuan/db/sphinx/development/post_core
+  path = /var/kuan/current/db/sphinx/production/post_core
   morphology = stem_en
   charset_dictpath = /usr/local/mmseg3/etc
   charset_type = zh_cn.utf-8
