--- a/config/assets.yml
+++ b/config/assets.yml
@@ -41,6 +41,8 @@ javascripts:
 stylesheets:
   base:
     - public/stylesheets/base.css
+    - public/stylesheets/kuanfont-embedded.css
+    - public/stylesheets/animation.css
   posts:
     - public/stylesheets/textboxlist.css
     - public/stylesheets/mooeditable.css
